updates for new redhat ubi image and also temp fix for INST-550 bug

--- a/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
+++ b/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
@@ -50,7 +50,7 @@ spec:
       path: null
     image:
       pullPolicy: IfNotPresent
-      repository: earlyaccess.jfrog.io/artifactory-pro
+      repository: image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/artifactory-pro
     internalArtifactoryPort: 8081
     internalPort: 8082
     javaOpts: {}
@@ -759,7 +759,7 @@ spec:
       internalPort: 443
     image:
       pullPolicy: IfNotPresent
-      repository: earlyaccess.jfrog.io/nginx-artifactory-pro
+      repository: image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/nginx-artifactory-pro
     labels: {}
     livenessProbe:
       enabled: true
