--- a/Openshift4/artifactory-ha-operator/deploy/olm-catalog/artifactory-ha-operator/1.0.0/artifactory-ha-operator.v1.0.0.clusterserviceversion.yaml
+++ b/Openshift4/artifactory-ha-operator/deploy/olm-catalog/artifactory-ha-operator/1.0.0/artifactory-ha-operator.v1.0.0.clusterserviceversion.yaml
@@ -50,7 +50,7 @@ metadata:
               },
               "image": {
                 "pullPolicy": "IfNotPresent",
-                "repository": "earlyaccess.jfrog.io/artifactory-pro"
+                "repository": "image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/artifactory-pro"
               },
               "internalArtifactoryPort": 8081,
               "internalPort": 8082,
@@ -348,7 +348,7 @@ metadata:
               },
               "image": {
                 "pullPolicy": "IfNotPresent",
-                "repository": "earlyaccess.jfrog.io/nginx-artifactory-pro"
+                "repository": "image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/nginx-artifactory-pro"
               },
               "labels": {},
               "livenessProbe": {
