adding tls-ingress for ssl certificates to work

--- a/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
+++ b/Openshift4/artifactory-ha-operator/deploy/crds/charts.helm.k8s.io_v1alpha1_openshiftartifactoryha_cr.yaml
@@ -748,6 +748,7 @@ spec:
     customArtifactoryConfigMap: null
     customConfigMap: null
     enabled: true
+    tlsSecretName: tls-ingress
     gid: 107
     http:
       enabled: true
