--- a/Openshift4/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/requirements.yaml
+++ b/Openshift4/artifactory-ha-operator/helm-charts/openshift-artifactory-ha/requirements.yaml
@@ -1,5 +1,4 @@
 dependencies:
-  - name: postgresql
-    version: 7.0.1
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    condition: postgresql.enabled
+  - name: artifactory-ha
+    version: 2.0.25
+    repository: https://charts.jfrog.io/
