--- a/Openshift4/artifactory-ha-operator/deploy/operatorgroup.yaml
+++ b/Openshift4/artifactory-ha-operator/deploy/operatorgroup.yaml
@@ -1,7 +1,7 @@
 apiVersion: operators.coreos.com/v1alpha2
 kind: OperatorGroup
 metadata:
-  name: jfrog-group
+  name: jfrog-operator-group
   namespace: jfrog-artifactory
 spec:
   targetNamespaces:
