adding more files to avoid checking in version tars to gitignore

--- a/Openshift4/.gitignore
+++ b/Openshift4/.gitignore
@@ -2,3 +2,5 @@ artifactory.cluster.license
 jfrog.team.crt
 jfrog.team.key
 artifactory-ha-operator/helm-charts/openshift-artifactory-ha
+*.tar.gz
+*.tgz
