--- a/Openshift4/artifactory-ha-operator/bundle/artifactory-ha-operator.v1.0.0.clusterserviceversion.yaml
+++ b/Openshift4/artifactory-ha-operator/bundle/artifactory-ha-operator.v1.0.0.clusterserviceversion.yaml
@@ -13,9 +13,9 @@ metadata:
           "spec": {
             "artifactory-ha": {
               "artifactory": {
-                "customInitContainersBegin": "- name: \"redhat-custom-setup\"\n  #image: \"{{ .Values.initContainerImage }}\"\n  image: {{ index .Values \"initContainerImage\" }}\n  imagePullPolicy: \"{{ .Values.artifactory.image.pullPolicy }}\"\n  command:\n    - 'sh'\n    - '-c'\n    - 'chown -R 1030:1030 {{ .Values.artifactory.persistence.mountPath }}'\n  securityContext:\n      runAsUser: 0\n  volumeMounts:\n    - mountPath: \"{{ .Values.artifactory.persistence.mountPath }}\"\n      name: volume\n",
+                "customInitContainersBegin": "- name: \"redhat-custom-setup\"\n  image: {{ index .Values \"initContainerImage\" }}\n  imagePullPolicy: \"{{ .Values.artifactory.image.pullPolicy }}\"\n  command:\n    - 'sh'\n    - '-c'\n    - 'chown -R 1030:1030 {{ .Values.artifactory.persistence.mountPath }}'\n  securityContext:\n      runAsUser: 0\n  volumeMounts:\n    - mountPath: \"{{ .Values.artifactory.persistence.mountPath }}\"\n      name: volume\n",
                 "image": {
-                  "repository": "image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/artifactory-pro"
+                  "repository": "registry.connect.redhat.com/jfrog/artifactory-pro:7.3.2"
                 },
                 "node": {
                   "waitForPrimaryStartup": {
@@ -31,7 +31,7 @@ metadata:
                 "user": "OVERRIDE"
               },
               "initContainerImage": "registry.redhat.io/ubi8-minimal",
-              "installerInfo": "{ \"productId\": \"Openshift_artifactory-ha/{{ .Chart.Version }}\", \"features\": [ { \"featureId\": \"ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}\" }, { \"featureId\": \"{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ default \"derby\" .Values.database.type }}{{ end }}/0.0.0\" }, { \"featureId\": \"Platform/{{ default 'openshift' .Values.installer.platform }}\" }, { \"featureId\": \"Partner/ACC-006983\" }, { \"featureId\": \"Channel/Openshift\" } ] }",
+              "installerInfo": "{ \"productId\": \"Openshift_artifactory-ha/{{ .Chart.Version }}\", \"features\": [ { \"featureId\": \"ArtifactoryVersion/{{ default .Chart.AppVersion .Values.artifactory.image.version }}\" }, { \"featureId\": \"{{ if .Values.postgresql.enabled }}postgresql{{ else }}{{ .Values.database.type }}{{ end }}/0.0.0\" }, { \"featureId\": \"Platform/openshift\" }, { \"featureId\": \"Partner/ACC-006983\" }, { \"featureId\": \"Channel/Openshift\" } ] }",
               "nginx": {
                 "http": {
                   "externalPort": 80,
@@ -42,7 +42,7 @@ metadata:
                   "internalPort": 8443
                 },
                 "image": {
-                  "repository": "image-registry.openshift-image-registry.svc:5000/jfrog-artifactory/nginx-artifactory-pro"
+                  "repository": "registry.redhat.io/rhel8/nginx-116:latest"
                 },
                 "mainConf": "# Main Nginx configuration file\nworker_processes  4;\nerror_log  {{ .Values.nginx.persistence.mountPath }}/logs//error.log warn;\npid        /tmp/nginx.pid;\nevents {\n  worker_connections  1024;\n}\nhttp {\n  include       /etc/nginx/mime.types;\n  default_type  application/octet-stream;\n  variables_hash_max_size 1024;\n  variables_hash_bucket_size 64;\n  server_names_hash_max_size 4096;\n  server_names_hash_bucket_size 128;\n  types_hash_max_size 2048;\n  types_hash_bucket_size 64;\n  proxy_read_timeout 2400s;\n  client_header_timeout 2400s;\n  client_body_timeout 2400s;\n  proxy_connect_timeout 75s;\n  proxy_send_timeout 2400s;\n  proxy_buffer_size 32k;\n  proxy_buffers 40 32k;\n  proxy_busy_buffers_size 64k;\n  proxy_temp_file_write_size 250m;\n  proxy_http_version 1.1;\n  client_body_buffer_size 128k;\n  log_format  main  '$remote_addr - $remote_user [$time_local] \"$request\" '\n  '$status $body_bytes_sent \"$http_referer\" '\n  '\"$http_user_agent\" \"$http_x_forwarded_for\"';\n  log_format timing 'ip = $remote_addr '\n  'user = \"$remote_user\" '\n  'local_time = \"$time_local\" '\n  'host = $host '\n  'request = \"$request\" '\n  'status = $status '\n  'bytes = $body_bytes_sent '\n  'upstream = \"$upstream_addr\" '\n  'upstream_time = $upstream_response_time '\n  'request_time = $request_time '\n  'referer = \"$http_referer\" '\n  'UA = \"$http_user_agent\"';\n  access_log  {{ .Values.nginx.persistence.mountPath }}/logs/access.log  timing;\n  sendfile        on;\n  #tcp_nopush     on;\n  keepalive_timeout  65;\n  #gzip  on;\n  include {{ .Values.nginx.persistence.mountPath }}/conf.d/*.conf;\n}\n"
               },
@@ -91,7 +91,7 @@ spec:
   description: Openshift 4 Operator to deploy JFrog Artifactory Enterprise
   displayName: JFrog Artifactory Enterprise Operator
   provider:
-    name: JFrog LTD
+    name: JFrog
   links:
     - name: JFrog
       url: https://www.jfrog.com
@@ -164,6 +164,7 @@ spec:
           - events
           - configmaps
           - secrets
+          - serviceaccounts
           verbs:
           - create
           - delete
@@ -195,9 +196,10 @@ spec:
           - get
         - apiGroups:
           - ""
+          resourceNames:
+          - artifactory-ha-operator
           resources:
-          - configmaps
-          - secrets
+          - '*'
           verbs:
           - '*'
         - apiGroups:
@@ -246,6 +248,24 @@ spec:
           - patch
           - update
           - watch
+        - apiGroups:
+          - networking.k8s.io
+          resources:
+          - '*'
+          verbs:
+          - '*'
+        - apiGroups:
+          - policy
+          resources:
+          - '*'
+          verbs:
+          - '*'
+        - apiGroups:
+          - 'rbac.authorization.k8s.io'
+          resources:
+          - '*'
+          verbs:
+          - '*'
         serviceAccountName: artifactory-ha-operator
     strategy: deployment
   installModes:
