--- a/Openshift4/openshift-artifactory-ha/Chart.yaml
+++ b/Openshift4/openshift-artifactory-ha/Chart.yaml
@@ -1,7 +1,6 @@
 apiVersion: v1
 appVersion: 7.3.2
-description: Universal Repository Manager supporting all major packaging formats,
-  build tools and CI servers.
+description: Openshift JFrog Artifactory HA subcharting Artifactory HA to work in Openshift environment
 home: https://www.jfrog.com/artifactory/
 icon: https://raw.githubusercontent.com/jfrog/charts/master/stable/artifactory-ha/logo/artifactory-logo.png
 keywords:
@@ -9,16 +8,12 @@ keywords:
 - jfrog
 - devops
 maintainers:
-- email: amithk@jfrog.com
-  name: amithins
-- email: daniele@jfrog.com
-  name: danielezer
-- email: eldada@jfrog.com
-  name: eldada
-- email: rimasm@jfrog.com
-  name: rimusz
+- email: vinaya@jfrog.com
+  name: Vinay Aggarwal
+- email: johnp@jfrog.com
+  name: John Peterson
 name: openshift-artifactory-ha
 sources:
 - https://bintray.com/jfrog/product/JFrog-Artifactory-Pro/view
 - https://github.com/jfrog/charts
-version: 2.2.9
+version: 2.3.0
