updates to operator v1.0.0 w/ bug fix for the master key issue

--- a/Openshift4/artifactory-ha-operator/watches.yaml
+++ b/Openshift4/artifactory-ha-operator/watches.yaml
@@ -4,5 +4,5 @@
   kind: OpenshiftArtifactoryHa
   chart: helm-charts/openshift-artifactory-ha
   overrideValues:
-    artifactory-ha.artifactory.image.repository: $RELATED_IMAGE_ARTIFACTORY_IMAGE_REPOSITORY
-    artifactory-ha.nginx.image.repository: $RELATED_IMAGE_NGINX_IMAGE_REPOSITORY
+    artifactory-ha.artifactory.image.override: $RELATED_IMAGE_ARTIFACTORY_IMAGE_REPOSITORY
+    artifactory-ha.nginx.image.override: $RELATED_IMAGE_NGINX_IMAGE_REPOSITORY
