Updated hosts vars.

--- a/Ansible/artifactory7/hosts.yml
+++ b/Ansible/artifactory7/hosts.yml
@@ -2,7 +2,7 @@
 all:
     vars:
         ansible_user: "ubuntu"
-        ansible_ssh_private_key_file: "/Users/jefff/.ssh/jeff-ec2-us-east.pem"
+        ansible_ssh_private_key_file: "ssh.pem"
         db_user: "artifactory"
         db_password: "xxxxxx"
     children:
@@ -17,60 +17,9 @@ all:
                 db_type: "postgresql"
                 db_driver: "org.postgresql.Driver"
                 db_url: "jdbc:postgresql://10.0.0.70:5432/artifactory"
-                server_name: "ansibleelb-623062857.us-east-1.elb.amazonaws.com"
-                certificate: |
-                    -----BEGIN CERTIFICATE-----
-                    MIID6DCCAtACCQCd6u7IjLN0hjANBgkqhkiG9w0BAQsFADCBtTELMAkGA1UEBhMC
-                    VVMxCzAJBgNVBAgMAldBMRAwDgYDVQQHDAdCb3RoZWxsMQ4wDAYDVQQKDAVKRnJv
-                    ZzEcMBoGA1UECwwTUGFydG5lciBFbmdpbmVlcmluZzE5MDcGA1UEAwwwYW5zaWJs
-                    ZWVsYi02MjMwNjI4NTcudXMtZWFzdC0xLmVsYi5hbWF6b25hd3MuY29tMR4wHAYJ
-                    KoZIhvcNAQkBFg9qZWZmZkBqZnJvZy5jb20wHhcNMjAwNDIxMDcyODU2WhcNMjEw
-                    NDIxMDcyODU2WjCBtTELMAkGA1UEBhMCVVMxCzAJBgNVBAgMAldBMRAwDgYDVQQH
-                    DAdCb3RoZWxsMQ4wDAYDVQQKDAVKRnJvZzEcMBoGA1UECwwTUGFydG5lciBFbmdp
-                    bmVlcmluZzE5MDcGA1UEAwwwYW5zaWJsZWVsYi02MjMwNjI4NTcudXMtZWFzdC0x
-                    LmVsYi5hbWF6b25hd3MuY29tMR4wHAYJKoZIhvcNAQkBFg9qZWZmZkBqZnJvZy5j
-                    b20wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQCcHjL1Epz/hWLBV0g7
-                    MOhTiPktZ5Y8TNiJCEuoPFCeFx0bcdWC2Wvly8OyAW7NXhWyscyi+vwDw4ix6SlE
-                    WNApxRb0F3vRNGL7PwTYfNM5XI7LRSZTE3cU7UEXMZh5Hyeqc0aRSbGTAsw8HUag
-                    7gzk//WIMWcSCWHuz4GubvvqlLpSgc/XSPLP59JZYDOGbDTF8Qh8x8j1cSPQ5NnA
-                    sGUqMloQOPEtG7KIXYt4uWT26zwdSjphUckqbX/bguknrAiffLZW7+j2SsoScJSf
-                    DWQgZLf8L7yVJKVSv9yzYyPMp054XnUTtwRY7W0KPCb2FiUM6RpcHXuNG8H2p7wL
-                    cizRAgMBAAEwDQYJKoZIhvcNAQELBQADggEBABzCfNNLxqYONvhA1t26WwBRzqgA
-                    G6pI8krV1mVf2WzGBxemkFOZnc7f3E7Lq710np6TZuPVFs9kHqg3ajd6JEdOpPLs
-                    kUpOXGSesBmCjDnaBtF5g2kAjaRjur50lc6Kc7+sGs5WqR94TUd8s1Gt92tsS69p
-                    UG2p05HETTZaVMPi4FhkGlCMFk2MCS8hyCqyu9TYiD2YvK3yY7OKFK9MYcmNdVXX
-                    cwsM2jIyu4g3w7KN9FeR/6ZXbkTF25162tientaxKQQfABOzVn8u5vaUyEAIASS5
-                    uQmfTevyClGg4Rp8iZeXywF7k0Fd8OulJy5GPACs9yps5VC/14Gv/9bswqI=
-                    -----END CERTIFICATE-----
-
-                certificate_key: |
-                    -----BEGIN RSA PRIVATE KEY-----
-                    MIIEogIBAAKCAQEAnB4y9RKc/4ViwVdIOzDoU4j5LWeWPEzYiQhLqDxQnhcdG3HV
-                    gtlr5cvDsgFuzV4VsrHMovr8A8OIsekpRFjQKcUW9Bd70TRi+z8E2HzTOVyOy0Um
-                    UxN3FO1BFzGYeR8nqnNGkUmxkwLMPB1GoO4M5P/1iDFnEglh7s+Brm776pS6UoHP
-                    10jyz+fSWWAzhmw0xfEIfMfI9XEj0OTZwLBlKjJaEDjxLRuyiF2LeLlk9us8HUo6
-                    YVHJKm1/24LpJ6wIn3y2Vu/o9krKEnCUnw1kIGS3/C+8lSSlUr/cs2MjzKdOeF51
-                    E7cEWO1tCjwm9hYlDOkaXB17jRvB9qe8C3Is0QIDAQABAoIBAArIrz5shbnEzfiK
-                    /etQyouSp5uyTxdlO4Pjtc4uNGdnM1SE/XmnaSObeq4eGThIanlIfNk5OxVLeXLI
-                    p1gYRnDMM3Sy9pOR6dBvHveRT8njkd2KrkYIzy374YYnn9+l/khw5Av/Kiv8gn0Y
-                    jJtrNirPX3eD6hm92izz2oJhGjeu6L18PVuQ9yxhyWSZMq6klLpzMvTaKQxs6inj
-                    IBfb8cBZIU0zJFNSKOW0aCHDtLyRiakoTiZehbe3GjDMVVTVF6hi4voP+MjGA48f
-                    fjJFS5vybWucSB80EHMgMTEZ7PGtZUMO+WGUrsEIwi97Zk2ru/JpC212dzgZy3EQ
-                    rD4Fm8ECgYEAyCdzvdpqPtg95GdadgyC6/Kb/PJEUrbv92yIgoH9hmSTmZzhZ9n1
-                    g196C0ODhIb5pjTdduUV8phseXwakTh0vV5Uo5mj29RTWodzz0WzvnePnAoU33px
-                    OldogCs1tT5PPZeT+g8UZwOePrAczr0OivhYwY8dK+B13RUP39Zi4ekCgYEAx61Y
-                    qwWd6XGWQ1BB1iQN2d+bihidtN4z5LLHVW+rJRplCNC8ng1lZPIwIn7Y4X8G5E2J
-                    liai3doO8QCoSzOPe821QcqlS5Ps5hAooqQUuE6iQBQqJa/BSstZ1OjQZ7xpqAJs
-                    skrPRRNJdQaCUYvCdp2VgIbFzOZT7EwR0f0yeqkCgYA5kneNXZz/9K1g3IW9vP2P
-                    ptpNmNYkQLCnp9VgTMnC9X0rS1/ewmgHYNg3EzVqUnTO5Rfq0hxNCqDxFMyDhwy1
-                    R8Pqxw/F9L4BJUMflLoOCFALny6/1XVqRagubb9mIcUjP012OQ4yT20eNQQkR2c+
-                    fA7zphnK/CaK8Dr/tKf+uQKBgBI1JFiz8mpPCTyqHNbCAuFTGoPFKtxLRsAb7UFF
-                    JX4EoiHjps9iuVQzIWCD4JLvWlmHGHywmTlRoPso7C+vS+4mG9kb+Wai3n88CfiK
-                    rbkAsprVO+Kj3CRN1qsrb5WGALxpPDAl0jCiSZh6N3foHptiUzedEnxUpGJvrVBQ
-                    nkHBAoGAMODLk99r/9v/z95FcZwpPdT+YaOJdkW1f4ZS+c7qpp+uxTibx9IUYdEZ
-                    0FF3MDzfdltCIN9jzBdnX3yT+X6c/HLMqSTa7eohciTPZ1aJr1GiLUUwf3oGhs09
-                    8uIBNLYW1f/GOCIRlaRrNAzfy9dagyiy/mwROQslovT3XgYmnlE=
-                    -----END RSA PRIVATE KEY-----
+                server_name: "some-server.com"
+                certificate: xxxxx
+                certificate_key: xxxxx
             children:
                 primary:
                     hosts:
